--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ prompt = "^0.4.1"
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:even_check"
+brain-calc = "brain_games.scripts.brain_calc:calc"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
