--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ prompt = "^0.4.1"
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:even_check"
 brain-calc = "brain_games.scripts.brain_calc:calc"
+brain-gcd = "brain_games.scripts.brain_gcd:gcd"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
