--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:even_check"
 brain-calc = "brain_games.scripts.brain_calc:calc"
 brain-gcd = "brain_games.scripts.brain_gcd:gcd"
+brain-progression = "brain_games.scripts.brain_progression:prog"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
