--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ brain-even = "brain_games.scripts.brain_even:even_check"
 brain-calc = "brain_games.scripts.brain_calc:calc"
 brain-gcd = "brain_games.scripts.brain_gcd:gcd"
 brain-progression = "brain_games.scripts.brain_progression:prog"
+brain-prime = "brain_games.scripts.brain_prime:fin"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
